# Matsux-AI-Terminal

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
src/: aider.rs  app.rs  cargo_runner.rs  config.rs  kb.rs  main.rs  matsux_log.rs
